--- a/parts/CDVO.tex
+++ b/parts/CDVO.tex
@@ -1015,12 +1015,15 @@
 			\[\inf_{x\in \mathfrak{R}_{j}}f(x)\abs{\mathfrak{R}_{j}}.\]
 			Ara considerem el conjunt d'índex dels rectangles definits per \(\{t_{1,0},t_{1,1}\}\times Q_{2}\times\dots\times Q_{d}\), \(I'\subset I\), i tenim
 			\[\sum_{i'\in I'}\inf_{x\in \mathfrak{R}_{i'}}f(x)\abs{\mathfrak{R}_{i'}}\leq\sum_{j\in J}\inf_{x\in \mathfrak{R}_{j}}f(x)\abs{\mathfrak{R}_{j}}.\]
-			I per tant\marginpar{Cut my life into pieces\\
-				This is my last resort\\
-				Suffocation\hfil\twonotes\hfil\\
-				No breathing\\
-				Don't give a fuck\\
-				if I cut my arm, bleeding}
+			I per tant%
+				\begin{comment}
+					\marginpar{Cut my life into pieces\\
+					This is my last resort\\
+					Suffocation\hfil\twonotes\hfil\\
+					No breathing\\
+					Don't give a fuck\\
+					if I cut my arm, bleeding}
+				\end{comment}
 			\begin{multline*}
 			\sum_{i\in I}\inf_{x\in \mathfrak{R}_{i}}f(x)\abs{\mathfrak{R}_{i}}=
 			\sum_{i\in I\smallsetminus I'}\inf_{x\in \mathfrak{R}_{i}}f(x)\abs{\mathfrak{R}_{i}}+\sum_{i'\in I'}\inf_{x\in \mathfrak{R}_{i'}}f(x)\abs{\mathfrak{R}_{i'}}\leq\\
