--- a/parts/EA.tex
+++ b/parts/EA.tex
@@ -727,7 +727,9 @@
 			H&\longmapsto\{f(h)\in G_{2}\mid h\in H\}\nonumber
 			\end{align}
 			és bijectiva.
-			\marginpar{Si ningú ve del futur per aturar-te, com de dolenta pot ser la decisió que estàs prenent?}
+			\begin{comment}
+				\marginpar{Si ningú ve del futur per aturar-te, com de dolenta pot ser la decisió que estàs prenent?}
+			\end{comment}
 			\item\label{enum:Primer Teorema de l'isomorfisme entre grups 3} L'aplicació
 			\begin{align}
 			\label{eq:primer teorema de l'isomorfisme eq3}
