--- a/Apunts.tex
+++ b/Apunts.tex
@@ -128,6 +128,8 @@
 \newcommand{\abs}[1]{\left\lvert#1\right\rvert}
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
 \newcommand{\lxor}{\veebar}
+\newcommand{\convergeixuniformement}{\rightrightarrows}
+
 \newcommand{\sii}{\iff}
 \newcommand{\implica}{\implies}
 \newcommand{\implicatper}{\impliedby}
